catch additional exception type